outputs/tsp_aco-aco/2026-02-08_12-00-15/problem_iter4_response9.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 3
    from scipy.sparse.csgraph import minimum_ spanning_tree
                                              ^^^^^^^^^^^^^
SyntaxError: invalid syntax
